apps/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8123
  type: ClusterIP
